set(opendnp3_public_headers
    ./include/opendnp3/IUTCTimeSource.h
    ./include/opendnp3/LogLevels.h
    ./include/opendnp3/StackStatistics.h
    ./include/opendnp3/TimeDuration.h
    ./include/opendnp3/Timestamp.h
    ./include/opendnp3/UTCTimestamp.h

    ./include/opendnp3/app/AnalogCommandEvent.h
    ./include/opendnp3/app/AnalogOutput.h
    ./include/opendnp3/app/AppConstants.h
    ./include/opendnp3/app/BaseMeasurementTypes.h
    ./include/opendnp3/app/BinaryCommandEvent.h
    ./include/opendnp3/app/ClassField.h
    ./include/opendnp3/app/ControlRelayOutputBlock.h
    ./include/opendnp3/app/DNPTime.h
    ./include/opendnp3/app/EventCells.h
    ./include/opendnp3/app/EventTriggers.h
    ./include/opendnp3/app/EventType.h
    ./include/opendnp3/app/Flags.h
    ./include/opendnp3/app/GroupVariationID.h
    ./include/opendnp3/app/IINField.h
    ./include/opendnp3/app/Indexed.h
    ./include/opendnp3/app/ITransactable.h
    ./include/opendnp3/app/MeasurementInfo.h
    ./include/opendnp3/app/MeasurementTypes.h
    ./include/opendnp3/app/MeasurementTypeSpecs.h
    ./include/opendnp3/app/OctetData.h
    ./include/opendnp3/app/OctetString.h
    ./include/opendnp3/app/QualityMasks.h
    ./include/opendnp3/app/SecurityStat.h

    ./include/opendnp3/app/parsing/ICollection.h

    ./include/opendnp3/gen/AnalogOutputStatusQuality.h
    ./include/opendnp3/gen/AnalogQuality.h
    ./include/opendnp3/gen/AssignClassType.h
    ./include/opendnp3/gen/Attributes.h
    ./include/opendnp3/gen/AuthErrorCode.h
    ./include/opendnp3/gen/BinaryOutputStatusQuality.h
    ./include/opendnp3/gen/BinaryQuality.h
    ./include/opendnp3/gen/CertificateType.h
    ./include/opendnp3/gen/ChallengeReason.h
    ./include/opendnp3/gen/ChannelState.h
    ./include/opendnp3/gen/CommandPointState.h
    ./include/opendnp3/gen/CommandStatus.h
    ./include/opendnp3/gen/ConfigAuthMode.h
    ./include/opendnp3/gen/ControlCode.h
    ./include/opendnp3/gen/CounterQuality.h
    ./include/opendnp3/gen/DoubleBit.h
    ./include/opendnp3/gen/DoubleBitBinaryQuality.h
    ./include/opendnp3/gen/EventAnalogOutputStatusVariation.h
    ./include/opendnp3/gen/EventAnalogVariation.h
    ./include/opendnp3/gen/EventBinaryOutputStatusVariation.h
    ./include/opendnp3/gen/EventBinaryVariation.h
    ./include/opendnp3/gen/EventCounterVariation.h
    ./include/opendnp3/gen/EventDoubleBinaryVariation.h
    ./include/opendnp3/gen/EventFrozenCounterVariation.h
    ./include/opendnp3/gen/EventMode.h
    ./include/opendnp3/gen/EventOctetStringVariation.h
    ./include/opendnp3/gen/EventSecurityStatVariation.h
    ./include/opendnp3/gen/FlagsType.h
    ./include/opendnp3/gen/FlowControl.h
    ./include/opendnp3/gen/FrozenCounterQuality.h
    ./include/opendnp3/gen/FunctionCode.h
    ./include/opendnp3/gen/GroupVariation.h
    ./include/opendnp3/gen/HMACType.h
    ./include/opendnp3/gen/IndexMode.h
    ./include/opendnp3/gen/IndexQualifierMode.h
    ./include/opendnp3/gen/IntervalUnits.h
    ./include/opendnp3/gen/KeyChangeMethod.h
    ./include/opendnp3/gen/KeyStatus.h
    ./include/opendnp3/gen/KeyWrapAlgorithm.h
    ./include/opendnp3/gen/LinkFunction.h
    ./include/opendnp3/gen/LinkStatus.h
    ./include/opendnp3/gen/MasterTaskType.h
    ./include/opendnp3/gen/OperateType.h
    ./include/opendnp3/gen/Parity.h
    ./include/opendnp3/gen/PointClass.h
    ./include/opendnp3/gen/QualifierCode.h
    ./include/opendnp3/gen/RestartMode.h
    ./include/opendnp3/gen/RestartType.h
    ./include/opendnp3/gen/SecurityStatIndex.h
    ./include/opendnp3/gen/ServerAcceptMode.h
    ./include/opendnp3/gen/StaticAnalogOutputStatusVariation.h
    ./include/opendnp3/gen/StaticAnalogVariation.h
    ./include/opendnp3/gen/StaticBinaryOutputStatusVariation.h
    ./include/opendnp3/gen/StaticBinaryVariation.h
    ./include/opendnp3/gen/StaticCounterVariation.h
    ./include/opendnp3/gen/StaticDoubleBinaryVariation.h
    ./include/opendnp3/gen/StaticFrozenCounterVariation.h
    ./include/opendnp3/gen/StaticOctetStringVariation.h
    ./include/opendnp3/gen/StaticSecurityStatVariation.h
    ./include/opendnp3/gen/StaticTimeAndIntervalVariation.h
    ./include/opendnp3/gen/StaticTypeBitmask.h
    ./include/opendnp3/gen/StopBits.h
    ./include/opendnp3/gen/TaskCompletion.h
    ./include/opendnp3/gen/TimestampMode.h
    ./include/opendnp3/gen/TimeSyncMode.h
    ./include/opendnp3/gen/UserOperation.h
    ./include/opendnp3/gen/UserRole.h

    ./include/opendnp3/link/Addresses.h
    ./include/opendnp3/link/ILinkListener.h
    ./include/opendnp3/link/LinkConfig.h
    ./include/opendnp3/link/LinkHeaderFields.h
    ./include/opendnp3/link/LinkStatistics.h

    ./include/opendnp3/master/CommandCallbackT.h
    ./include/opendnp3/master/CommandPointResult.h
    ./include/opendnp3/master/CommandSet.h
    ./include/opendnp3/master/HeaderInfo.h
    ./include/opendnp3/master/HeaderTypes.h
    ./include/opendnp3/master/ICommandCollection.h
    ./include/opendnp3/master/ICommandProcessor.h
    ./include/opendnp3/master/ICommandTaskResult.h
    ./include/opendnp3/master/IMasterApplication.h
    ./include/opendnp3/master/ISOEHandler.h
    ./include/opendnp3/master/ITaskCallback.h
    ./include/opendnp3/master/MasterParams.h
    ./include/opendnp3/master/RestartOperationResult.h
    ./include/opendnp3/master/TaskConfig.h
    ./include/opendnp3/master/TaskId.h
    ./include/opendnp3/master/TaskInfo.h

    ./include/opendnp3/outstation/ApplicationIIN.h
    ./include/opendnp3/outstation/Cell.h
    ./include/opendnp3/outstation/DatabaseSizes.h
    ./include/opendnp3/outstation/EventBufferConfig.h
    ./include/opendnp3/outstation/ICommandHandler.h
    ./include/opendnp3/outstation/IOutstationApplication.h
    ./include/opendnp3/outstation/IUpdateHandler.h
    ./include/opendnp3/outstation/MeasurementConfig.h
    ./include/opendnp3/outstation/OutstationConfig.h
    ./include/opendnp3/outstation/OutstationParams.h
    ./include/opendnp3/outstation/SimpleCommandHandler.h
    ./include/opendnp3/outstation/StaticTypeBitfield.h
)

set(opendnp3_private_headers
    ./src/LayerInterfaces.h
    ./src/Route.h
    ./src/SequenceNum.h

    ./src/app/APDUBuilders.h
    ./src/app/APDUHeader.h
    ./src/app/APDULogging.h
    ./src/app/APDURequest.h
    ./src/app/APDUResponse.h
    ./src/app/APDUWrapper.h
    ./src/app/AppControlField.h
    ./src/app/AppSeqNum.h
    ./src/app/BitfieldRangeWriteIterator.h
    ./src/app/CountWriteIterator.h
    ./src/app/DNP3Serializer.h
    ./src/app/DownSampling.h
    ./src/app/Functions.h
    ./src/app/GroupVariationRecord.h
    ./src/app/HeaderWriter.h
    ./src/app/IINValue.h
    ./src/app/IVariableLength.h
    ./src/app/MeasurementFactory.h
    ./src/app/Message.h
    ./src/app/PrefixedWriteIterator.h
    ./src/app/QualityFlags.h
    ./src/app/Range.h
    ./src/app/RangeWriteIterator.h
    ./src/app/SequenceInfo.h
    ./src/app/TxBuffer.h
    ./src/app/WriteConversions.h
    ./src/app/WriteConversionTemplates.h

    ./src/app/parsing/APDUHeaderParser.h
    ./src/app/parsing/APDUParser.h
    ./src/app/parsing/BitReader.h
    ./src/app/parsing/BufferedCollection.h
    ./src/app/parsing/Collections.h
    ./src/app/parsing/CountIndexParser.h
    ./src/app/parsing/CountParser.h
    ./src/app/parsing/FreeFormatParser.h
    ./src/app/parsing/Functions.h
    ./src/app/parsing/IAPDUHandler.h
    ./src/app/parsing/IWhiteList.h
    ./src/app/parsing/NumParser.h
    ./src/app/parsing/ObjectHeaderParser.h
    ./src/app/parsing/ParseResult.h
    ./src/app/parsing/ParserSettings.h
    ./src/app/parsing/PrefixFields.h
    ./src/app/parsing/RangeParser.h

    ./src/link/CRC.h
    ./src/link/IFrameSink.h
    ./src/link/ILinkLayer.h
    ./src/link/ILinkSession.h
    ./src/link/ILinkTx.h
    ./src/link/ITransportSegment.h
    ./src/link/LinkContext.h
    ./src/link/LinkFrame.h
    ./src/link/LinkHeader.h
    ./src/link/LinkLayer.h
    ./src/link/LinkLayerConfig.h
    ./src/link/LinkLayerConstants.h
    ./src/link/LinkLayerParser.h
    ./src/link/PriLinkLayerStates.h
    ./src/link/SecLinkLayerStates.h
    ./src/link/ShiftableBuffer.h
    ./src/link/Singleton.h

    ./src/master/AssignClassTask.h
    ./src/master/ClearRestartTask.h
    ./src/master/CommandSetOps.h
    ./src/master/CommandTask.h
    ./src/master/CommandTaskResult.h
    ./src/master/DisableUnsolicitedTask.h
    ./src/master/EmptyResponseTask.h
    ./src/master/EnableUnsolicitedTask.h
    ./src/master/EventScanTask.h
    ./src/master/HeaderBuilder.h
    ./src/master/ICommandHeader.h
    ./src/master/IMasterScheduler.h
    ./src/master/IMasterTask.h
    ./src/master/IMasterTaskRunner.h
    ./src/master/IScheduleCallback.h
    ./src/master/LANTimeSyncTask.h
    ./src/master/MasterContext.h
    ./src/master/MasterSchedulerBackend.h
    ./src/master/MasterTasks.h
    ./src/master/MeasurementHandler.h
    ./src/master/PollTaskBase.h
    ./src/master/RestartOperationTask.h
    ./src/master/ScanResult.h
    ./src/master/SerialTimeSyncTask.h
    ./src/master/StartupIntegrityPoll.h
    ./src/master/TaskBehavior.h
    ./src/master/TaskContext.h
    ./src/master/TaskPriority.h
    ./src/master/TimeSyncHandler.h
    ./src/master/TypedCommandHeader.h
    ./src/master/UserPollTask.h

    ./src/objects/Group1.h
    ./src/objects/Group2.h
    ./src/objects/Group3.h
    ./src/objects/Group4.h
    ./src/objects/Group10.h
    ./src/objects/Group11.h
    ./src/objects/Group12.h
    ./src/objects/Group13.h
    ./src/objects/Group20.h
    ./src/objects/Group21.h
    ./src/objects/Group22.h
    ./src/objects/Group23.h
    ./src/objects/Group30.h
    ./src/objects/Group32.h
    ./src/objects/Group40.h
    ./src/objects/Group41.h
    ./src/objects/Group42.h
    ./src/objects/Group43.h
    ./src/objects/Group50.h
    ./src/objects/Group51.h
    ./src/objects/Group52.h
    ./src/objects/Group60.h
    ./src/objects/Group70.h
    ./src/objects/Group80.h
    ./src/objects/Group110.h
    ./src/objects/Group111.h
    ./src/objects/Group112.h
    ./src/objects/Group113.h
    ./src/objects/Group120.h
    ./src/objects/Group121.h
    ./src/objects/Group122.h

    ./src/outstation/AssignClassHandler.h
    ./src/outstation/ClassBasedRequestHandler.h
    ./src/outstation/CommandActionAdapter.h
    ./src/outstation/CommandResponseHandler.h
    ./src/outstation/ConstantCommandAction.h
    ./src/outstation/ControlState.h
    ./src/outstation/Database.h
    ./src/outstation/DatabaseBuffers.h
    ./src/outstation/DatabaseConfigView.h
    ./src/outstation/DeferredRequest.h
    ./src/outstation/Event.h
    ./src/outstation/IClassAssigner.h
    ./src/outstation/ICommandAction.h
    ./src/outstation/IDatabase.h
    ./src/outstation/IEventReceiver.h
    ./src/outstation/IEventRecorder.h
    ./src/outstation/IEventSelector.h
    ./src/outstation/IINHelpers.h
    ./src/outstation/IndexSearch.h
    ./src/outstation/IResponseLoader.h
    ./src/outstation/IStaticSelector.h
    ./src/outstation/OctetStringSerializer.h
    ./src/outstation/OutstationChannelStates.h
    ./src/outstation/OutstationContext.h
    ./src/outstation/OutstationSeqNum.h
    ./src/outstation/OutstationStates.h
    ./src/outstation/ParsedRequest.h
    ./src/outstation/ReadHandler.h
    ./src/outstation/RequestHistory.h
    ./src/outstation/ResponseContext.h
    ./src/outstation/SelectedRanges.h
    ./src/outstation/StaticBuffers.h
    ./src/outstation/StaticWriters.h
    ./src/outstation/TimeSyncState.h
    ./src/outstation/WriteHandler.h

    ./src/outstation/event/ASDUEventWriteHandler.h
    ./src/outstation/event/ClazzCount.h
    ./src/outstation/event/EventBuffer.h
    ./src/outstation/event/EventCollection.h
    ./src/outstation/event/EventLists.h
    ./src/outstation/event/EventRecord.h
    ./src/outstation/event/EventSelection.h
    ./src/outstation/event/EventState.h
    ./src/outstation/event/EventStorage.h
    ./src/outstation/event/EventTypeImpl.h
    ./src/outstation/event/EventUpdate.h
    ./src/outstation/event/EventWriters.h
    ./src/outstation/event/EventWriting.h
    ./src/outstation/event/IEventType.h
    ./src/outstation/event/IEventWriteHandler.h
    ./src/outstation/event/List.h
    ./src/outstation/event/TypedEventRecord.h
    ./src/outstation/event/TypedStorage.h

    ./src/transport/TransportConstants.h
    ./src/transport/TransportHeader.h
    ./src/transport/TransportLayer.h
    ./src/transport/TransportRx.h
    ./src/transport/TransportSeqNum.h
    ./src/transport/TransportStack.h
    ./src/transport/TransportTx.h
)

set(opendnp3_src
    ./src/LogLevels.cpp
    ./src/TimeDuration.cpp
    ./src/Timestamp.cpp

    ./src/app/AnalogCommandEvent.cpp
    ./src/app/AnalogOutput.cpp
    ./src/app/APDUBuilders.cpp
    ./src/app/APDUHeader.cpp
    ./src/app/APDULogging.cpp
    ./src/app/APDURequest.cpp
    ./src/app/APDUResponse.cpp
    ./src/app/APDUWrapper.cpp
    ./src/app/AppControlField.cpp
    ./src/app/BinaryCommandEvent.cpp
    ./src/app/ClassField.cpp
    ./src/app/ControlRelayOutputBlock.cpp
    ./src/app/EventTriggers.cpp
    ./src/app/Functions.cpp
    ./src/app/GroupVariationRecord.cpp
    ./src/app/HeaderWriter.cpp
    ./src/app/IINField.cpp
    ./src/app/MeasurementTypes.cpp
    ./src/app/OctetData.cpp
    ./src/app/QualityFlags.cpp
    ./src/app/SecurityStat.cpp

    ./src/app/parsing/APDUHeaderParser.cpp
    ./src/app/parsing/APDUParser.cpp
    ./src/app/parsing/BitReader.cpp
    ./src/app/parsing/CountIndexParser.cpp
    ./src/app/parsing/CountParser.cpp
    ./src/app/parsing/FreeFormatParser.cpp
    ./src/app/parsing/IAPDUHandler.cpp
    ./src/app/parsing/NumParser.cpp
    ./src/app/parsing/ObjectHeaderParser.cpp
    ./src/app/parsing/RangeParser.cpp

    ./src/gen/Attributes.cpp
    ./src/gen/AuthErrorCode.cpp
    ./src/gen/CertificateType.cpp
    ./src/gen/ChallengeReason.cpp
    ./src/gen/ChannelState.cpp
    ./src/gen/CommandPointState.cpp
    ./src/gen/CommandStatus.cpp
    ./src/gen/ControlCode.cpp
    ./src/gen/DoubleBit.cpp
    ./src/gen/FlagsType.cpp
    ./src/gen/FlowControl.cpp
    ./src/gen/FunctionCode.cpp
    ./src/gen/GroupVariation.cpp
    ./src/gen/HMACType.cpp
    ./src/gen/IntervalUnits.cpp
    ./src/gen/KeyChangeMethod.cpp
    ./src/gen/KeyStatus.cpp
    ./src/gen/KeyWrapAlgorithm.cpp
    ./src/gen/LinkFunction.cpp
    ./src/gen/LinkStatus.cpp
    ./src/gen/MasterTaskType.cpp
    ./src/gen/Parity.cpp
    ./src/gen/QualifierCode.cpp
    ./src/gen/ServerAcceptMode.cpp
    ./src/gen/StopBits.cpp
    ./src/gen/TaskCompletion.cpp
    ./src/gen/UserOperation.cpp
    ./src/gen/UserRole.cpp

    ./src/link/CRC.cpp
    ./src/link/LinkContext.cpp
    ./src/link/LinkFrame.cpp
    ./src/link/LinkHeader.cpp
    ./src/link/LinkHeaderFields.cpp
    ./src/link/LinkLayer.cpp
    ./src/link/LinkLayerParser.cpp
    ./src/link/PriLinkLayerStates.cpp
    ./src/link/SecLinkLayerStates.cpp
    ./src/link/ShiftableBuffer.cpp

    ./src/master/AssignClassTask.cpp
    ./src/master/ClearRestartTask.cpp
    ./src/master/CommandSet.cpp
    ./src/master/CommandSetOps.cpp
    ./src/master/CommandTask.cpp
    ./src/master/CommandTaskResult.cpp
    ./src/master/DisableUnsolicitedTask.cpp
    ./src/master/EmptyResponseTask.cpp
    ./src/master/EnableUnsolicitedTask.cpp
    ./src/master/EventScanTask.cpp
    ./src/master/HeaderTypes.cpp
    ./src/master/IMasterTask.cpp
    ./src/master/LANTimeSyncTask.cpp
    ./src/master/MasterContext.cpp
    ./src/master/MasterSchedulerBackend.cpp
    ./src/master/MasterTasks.cpp
    ./src/master/MeasurementHandler.cpp
    ./src/master/PollTaskBase.cpp
    ./src/master/RestartOperationTask.cpp
    ./src/master/SerialTimeSyncTask.cpp
    ./src/master/StartupIntegrityPoll.cpp
    ./src/master/TaskBehavior.cpp
    ./src/master/TaskContext.cpp
    ./src/master/UserPollTask.cpp

    ./src/objects/Group1.cpp
    ./src/objects/Group2.cpp
    ./src/objects/Group3.cpp
    ./src/objects/Group4.cpp
    ./src/objects/Group10.cpp
    ./src/objects/Group11.cpp
    ./src/objects/Group12.cpp
    ./src/objects/Group13.cpp
    ./src/objects/Group20.cpp
    ./src/objects/Group21.cpp
    ./src/objects/Group22.cpp
    ./src/objects/Group23.cpp
    ./src/objects/Group30.cpp
    ./src/objects/Group32.cpp
    ./src/objects/Group40.cpp
    ./src/objects/Group41.cpp
    ./src/objects/Group42.cpp
    ./src/objects/Group43.cpp
    ./src/objects/Group50.cpp
    ./src/objects/Group51.cpp
    ./src/objects/Group52.cpp
    ./src/objects/Group120.cpp
    ./src/objects/Group121.cpp
    ./src/objects/Group122.cpp


    ./src/outstation/ApplicationIIN.cpp
    ./src/outstation/AssignClassHandler.cpp
    ./src/outstation/ClassBasedRequestHandler.cpp
    ./src/outstation/CommandActionAdapter.cpp
    ./src/outstation/CommandResponseHandler.cpp
    ./src/outstation/Database.cpp
    ./src/outstation/DatabaseBuffers.cpp
    ./src/outstation/DatabaseConfigView.cpp
    ./src/outstation/DeferredRequest.cpp
    ./src/outstation/EventBufferConfig.cpp
    ./src/outstation/IINHelpers.cpp
    ./src/outstation/IOutstationApplication.cpp
    ./src/outstation/OctetStringSerializer.cpp
    ./src/outstation/OutstationContext.cpp
    ./src/outstation/OutstationStates.cpp
    ./src/outstation/ReadHandler.cpp
    ./src/outstation/RequestHistory.cpp
    ./src/outstation/ResponseContext.cpp
    ./src/outstation/SelectedRanges.cpp
    ./src/outstation/SimpleCommandHandler.cpp
    ./src/outstation/StaticBuffers.cpp
    ./src/outstation/StaticWriters.cpp
    ./src/outstation/WriteHandler.cpp

#[[
    ./src/outstation/event/ASDUEventWriteHandler.cpp
    ./src/outstation/event/EventBuffer.cpp
    ./src/outstation/event/EventLists.cpp
    ./src/outstation/event/EventRecord.cpp
    ./src/outstation/event/EventSelection.cpp
    ./src/outstation/event/EventStorage.cpp
    ./src/outstation/event/EventWriters.cpp
    ./src/outstation/event/EventWriting.cpp
]]
    ./src/transport/TransportHeader.cpp
    ./src/transport/TransportLayer.cpp
    ./src/transport/TransportRx.cpp
    ./src/transport/TransportStack.cpp
    ./src/transport/TransportTx.cpp
)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${opendnp3_public_headers} ${opendnp3_private_headers} ${opendnp3_src})

add_library(opendnp3 ${opendnp3_public_headers} ${opendnp3_private_headers} ${opendnp3_src})
target_compile_features(opendnp3 PRIVATE cxx_std_14)
target_link_libraries(opendnp3 PRIVATE ser4cpp exe4cpp log4cpp)
target_include_directories(opendnp3
    PUBLIC ./include
    PRIVATE ./src
)
